--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "recipe-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Heyitzdevchris.github.io/Recipe-Tracker",
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -10,7 +11,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1"
+    "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^5.0.0"
   },
   "scripts": {
     "build": "react-scripts build",
@@ -20,6 +22,8 @@
     "docker:test": "docker run -t  thinkful-ed/zid-fe-react-state-management-xx-assignment npm test",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages-d build",
     "start:solution": "npm run -it docker:build && npm run docker:run",
     "test": "react-scripts test",
     "test:solution": "npm run docker:build && npm run docker:test"
